--- a/src/sass/components/_currentUserModal.scss
+++ b/src/sass/components/_currentUserModal.scss
@@ -13,7 +13,7 @@ $currentUserModalProfilePicSizeMobile: 140px;
 current-user-modal {
   @include fixed(0, 0);
   @include size(100%, 100%);
-  @include fadeEnterLeave();
+  @include fadeShowHide();
   z-index: 10;
 
   .modalContent {
